--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lista de Usuarios</title>
+    <title>Hero😎😎💕</title>
 </head>
+
 <body>
     <h1>Lista de Usuarios</h1>
     <table>
@@ -21,5 +22,6 @@
         </tr>
         {% endfor %}
     </table>
+    <a href="/">Ir a página de Inico</a>
 </body>
 </html>
